--- a/index (1).html
+++ b/index (1).html
@@ -66,7 +66,7 @@
         //       this.lessons = data;
         //       console.log("Lessons:" + lessons)
         //     })
-        //     .catch(error => {
+        //     .catch(error => 
         //       console.log('Error:', error);
         //     })
         // }
