--- a/index (1).html
+++ b/index (1).html
@@ -62,7 +62,7 @@
         //       if (!response.ok) throw new Error(response.statusText);
         //       return response.json();
         //     })
-        //     .then(data => {
+        //     .then(data => 
         //       this.lessons = data;
         //       console.log("Lessons:" + lessons)
         //     })
