--- a/index (1).html
+++ b/index (1).html
@@ -60,7 +60,7 @@
         //   fetch('http://localhost:3000/lessons
         //     .then(response => {
         //       if (!response.ok) throw new Error(response.statusText);
-        //       return response.json();
+        //       return response.json()
         //     })
         //     .then(data => 
         //       this.lessons = data;
